[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/Results.gd" id="1_ofw3w"]

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofw3w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.109804, 0.0784314, 0.117647, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 14

[node name="SpacerTop" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Results"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 44

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Last Score: 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="BestLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Score: 0"
horizontal_alignment = 1

[node name="GamesLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Games Played: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="RewardedShuffleButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Rewarded Shuffle Run"

[node name="MenuButton" type="Button" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"

[node name="SpacerBottom" type="Control" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
